	doap:bug-database
		<https://rt.cpan.org/Dist/Display.html?Queue=WWW-Finger> ;
	doap:maintainer <http://tobyinkster.co.uk/#i> ;
	doap:developer  <http://tobyinkster.co.uk/#i> ;
	doap:documenter <http://tobyinkster.co.uk/#i> ;
	doap:tester     <http://tobyinkster.co.uk/#i> ;
	doap:created    "2009-12-08"^^xsd:date ;
	doap:license    <http://dev.perl.org/licenses/> ;
	doap:release    :v_0.01 , :v_0.02 , :v_0.03 , :v_0.04 , :v_0.05 , :v_0.06
	.

:v_0.01
	a               doap:Version ;
	dc:issued       "2009-12-14"^^xsd:date ;
	doap:revision   "0.01"^^xsd:string ;
	asc:changes
	[
		asc:comment  "Original version."@en
	]
	.
	
:v_0.02
	a               doap:Version ;
	dc:issued       "2009-12-14"^^xsd:date ;
	doap:revision   "0.02"^^xsd:string ;
	asc:changes
	[
		asc:bugfix   "Fixed problems with build."@en
	]
	.
	
:v_0.03
	a               doap:Version ;
	dc:issued       "2009-12-15"^^xsd:date ;
	doap:revision   "0.03"^^xsd:string ;
	asc:changes
	[
		asc:bugfix   "Fixed package signature."@en ;
		asc:addition "WWW::Finger::Webfinger now provides an ->endpoint method."@en
	]
	.
	
:v_0.04
	a               doap:Version ;
	dc:issued       "2009-12-16"^^xsd:date ;
	doap:revision   "0.04"^^xsd:string ;
	asc:changes
	[
		asc:addition "Bundle a command-line query tool."@en ;
		asc:change   "Change default scheme for Webfinger from 'acct://' to 'acct:'."@en ;
		asc:bugfix   "Fingerpoint bugfix in ->graph()."@en ;
		asc:bugfix   "Unimplemented methods return empty arrays properly."@en
	]
	.
	
:v_0.05
	a               doap:Version ;
	dc:issued       "2009-12-16"^^xsd:date ;
	doap:revision   "0.05"^^xsd:string ;
	asc:changes
	[
		asc:bugfix   "Mini bug-fixes."@en ;
		asc:update   "use XRD::Parser 0.04."@en
	]
	.
	
:v_0.06
	a               doap:Version ;
	dc:issued       "2009-01-06"^^xsd:date ;
	doap:revision   "0.06"^^xsd:string ;
	asc:changes
	[
		asc:addition "Support Joe Gregorio's alternative to current Webfinger protocol."@en ;